Always verify writing data to external file was successfull

Always make sure that QFile::write() has written all data to prevent data
loss in case we run out of disk space.

BUG: 283692
FIXED-IN: 1.11.1