server/src/storage/parthelper.cpp
@@ -23,6 +23,7 @@
 #include "entities.h"
 #include "selectquerybuilder.h"
 #include "dbconfig.h"
+#include "imapstreamparser.h"
 #include <akstandarddirs.h>
 #include <libs/xdgbasedirs_p.h>
 
@@ -200,6 +201,31 @@ void PartHelper::removeFile( const QString &fileName )
   }
   QFile::remove( fileName );
 }
+
+bool PartHelper::streamToFile( ImapStreamParser* streamParser, QFile &file, QIODevice::OpenMode openMode )
+{
+  Q_ASSERT( openMode & QIODevice::WriteOnly );
+
+  if ( !file.isOpen() ) {
+    if ( !file.open( openMode ) ) {
+      throw PartHelperException( "Unable to update item part" );
+    }
+  } else {
+    Q_ASSERT( file.openMode() & QIODevice::WriteOnly );
+  }
+
+  QByteArray value;
+  while ( !streamParser->atLiteralEnd() ) {
+    value = streamParser->readLiteralPart();
+    if ( file.write( value ) != value.size() ) {
+      throw PartHelperException( "Unable to write payload to file" );
+    }
+  }
+  file.close();
+
+  return true;
+}
+
 
 QByteArray PartHelper::translateData( const QByteArray &data, bool isExternal )
 {
